# privacy_preserving_sfm

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  README.md
cmake/: CMakeHelper.cmake
lib/: CMakeLists.txt
lib/re3q3/: CMakeLists.txt  README.md  re3q3_mex.cpp  test_re3q3.cpp
lib/re3q3/examples/: line_pose.cpp  line_pose.h
lib/re3q3/re3q3/: re3q3.h
scripts/matlab/ppsfm/data_preparation/: extract_gravity.m  generate_gravity_file.m
scripts/matlab/ppsfm/evaluation/colmap/: compare_colmap_poses.m  count_images_below_error_threshold.m  evaluate_inits.m  get_colmap_image_positions.m  init_eval.m
scripts/matlab/ppsfm/evaluation/strecha/: compare_strecha_poses.m  generate_strecha_gravity.m  get_strecha_image_gt.m  get_strecha_locations.m  read_strecha_gt_camera_file.m  run_evaluations.m
scripts/matlab/ppsfm/plot_model_comparison/: plot_model_comparison.m  plot_model_comparison_impl.m  update_image_positions.m
src/: CMakeLists.txt
src/base/: CMakeLists.txt  correspondence_graph.cc  correspondence_graph.h  cost_functions.h  database.cc  database.h  database_cache.cc  image.cc  image.h  image_reader.cc  image_reader.h  pose.cc  pose.h  projection.cc  projection.h  reconstruction.cc  reconstruction.h  track.cc  track.h  triangulation.cc  triangulation.h
src/controllers/: CMakeLists.txt  automatic_reconstruction.cc  automatic_reconstruction.h  incremental_mapper.cc  incremental_mapper.h
src/estimators/: CMakeLists.txt  absolute_pose.cc  absolute_pose.h  pose.cc  pose.h  triangulation.cc  triangulation.h  utils.cc  utils.h
src/exe/: CMakeLists.txt  ppsfm.cc
src/feature/: CMakeLists.txt  extraction.cc  extraction.h  matching.cc  matching.h  sift.cc  sift.h  types.h
src/init/: CMakeLists.txt  initializer.cc  initializer.h  initializer_test.cc  sfm2d.cc  sfm2d.h  sfm2d_test.cc
src/optim/: CMakeLists.txt  bundle_adjustment.cc  bundle_adjustment.h
src/sfm/: incremental_mapper.cc  incremental_mapper.h  incremental_triangulator.cc  incremental_triangulator.h
src/ui/: CMakeLists.txt  automatic_reconstruction_widget.cc  colormaps.cc  colormaps.h  database_management_widget.cc  database_management_widget.h  feature_extraction_widget.cc  feature_extraction_widget.h  feature_matching_widget.cc  image_viewer_widget.cc  image_viewer_widget.h  main_window.cc  main_window.h  match_matrix_widget.cc  model_viewer_widget.cc  point_viewer_widget.cc  project_widget.cc  qt_utils.cc  qt_utils.h  reconstruction_options_widget.cc  reconstruction_stats_widget.cc  render_options_widget.cc
src/util/: CMakeLists.txt  alignment.h  bitmap.cc  bitmap.h  option_manager.cc  option_manager.h  types.h
